@startuml
'https://plantuml.com/class-diagram

class HeroAircraft {
    - {static}heroAircraft:HeroAircraft
    - shootNum:int
    - power:int
    - direction:int
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp):void
    + {static}getHeroAircraft():HeroAircraft
    + forward():void
    + shoot():List<BaseBullet>
}

class Game {
}

Game ..> HeroAircraft
HeroAircraft <.. HeroAircraft
@enduml